--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,6 +101,15 @@
     body {
         @apply bg-background text-foreground;
     }
+    h1 {
+        @apply text-2xl font-bold;
+    }
+    h2 {
+        @apply text-xl font-bold;
+    }
+    h3 {
+        @apply text-lg font-bold;
+    }
 }
 
 @layer components {
@@ -119,4 +128,36 @@
     .custome-form-error{
         @apply font-inter text-[13px] text-red-300 font-normal tracking-tight
     }
+    .custom-label{
+        @apply font-inter mb-2 block text-[16px] font-medium text-gray-700
+    }
+}
+
+.rich-text-content h1 {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+.rich-text-content h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 0.75rem;
+}
+.rich-text-content h3 {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+.rich-text-content p {
+    margin-bottom: 1rem;
+}
+.rich-text-content em {
+    font-style: italic;
+}
+.rich-text-content s {
+    text-decoration: line-through;
+}
+.rich-text-content mark {
+    background-color: #ffeb3b; /* Amarillo para el resaltado */
+    padding: 0.1rem 0.2rem;
 }
