Task: Reconfiguración estructura, agregar seccion de permisos por paginas internas. Date: 03-04-2025 Versión: 2.0

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,13 +101,13 @@
     body {
         @apply bg-background text-foreground;
     }
-    h1 {
+    .tiptap > h1 {
         @apply text-2xl font-bold;
     }
-    h2 {
+    .tiptap > h2 {
         @apply text-xl font-bold;
     }
-    h3 {
+    .tiptap > h3 {
         @apply text-lg font-bold;
     }
 }
